# childish_task

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
base/: admin.py  urls.py
base/api/: user.py  user_car.py
base/migrations/: 0001_initial.py  0002_alter_usercar_managers_alter_usercar_deleted_at.py
base/models/: __init__.py  receivers.py  user.py
base/serializers/: user.py  user_car.py
car_management/: urls.py
car_management/api/: car_brand.py  car_model.py
car_management/migrations/: 0001_initial.py  0002_alter_carbrand_managers_alter_carbrand_deleted_at.py  0003_alter_carmodel_unique_together.py
car_management/models/: __init__.py  car.py
car_management/serializers/: car_brand.py  car_model.py
settings/: settings.py  urls.py
shared/api/: mixins.py
shared/models/: mixins.py
